# flashquad

./: .gitignore  LICENSE  Makefile  README.md  makefile  pyproject.toml
.github/workflows/: draft-pdf.yml
dev-docs/: publish.md
docs/: api.md  conf.py  getting-started.md  index.md
flashquad/: __init__.py  integrate.py  integrator.py
flashquad/methods/: __init__.py  adpmc.py  boole.py  common.py  gauss.py  mc.py  rand.py  simpson.py  trapezoid.py
flashquad/utils/: __init__.py  backend.py
fuzz/: README.md  __init__.py  integrands.py  run_fuzz.py  runners.py
paper/: paper.md  readme.txt
paper/jats/: paper.jats
tests/: conftest.py  test_accuracy_analytical.py  test_accuracy_scipy.py  test_features.py  test_integrate.py  test_setup.py
